--- a/src/assets/scss/_helpers.scss
+++ b/src/assets/scss/_helpers.scss
@@ -15,25 +15,14 @@
 }
 
 .section {
-  position: relative;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
   width: 100%;
-  height: 100vh;
-  overflow: hidden;
 
   &__child {
-    position: absolute;
-    left: 16rem;
-    height: 100vh;
-    right: 0;
-    overflow: hidden;
+    margin-left: 16rem;
     padding: 0 2rem;
 
     @include media(atSmall) {
-      left: 0;
+      margin-left: 0;
     }
   }
 
